--- a/css/style.css
+++ b/css/style.css
@@ -152,3 +152,13 @@ margin-left: -40%;
 .flick{
   -webkit-font-smoothing: antialiased;
 }
+
+#t1{
+  font-size: 40px;
+  margin-left: -79%;
+}
+
+#t2{
+  font-size: 40px;
+  margin-left: -56%;
+}
